2008-03-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): bug-fix release 0.999375-6

	* R/diagMatrix.R (diag2tT.u): utility to be smarter in
	  <diagonal> o <sparse_triangular>
	  setAs(., "nMatrix") added.

	* R/diagMatrix.R (Diagonal): Diagonal(4, x=3) now works too

	* R/Auxiliaries.R (.diagU2N): more careful coercion in 2 steps
		new argument 'checkDense = FALSE'.


2008-03-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgeMatrix.c (dgeMatrix_exp): fix the octave-origin bug in the
	back-permutation of the matrix exponential.

	* tests/matr-exp.R: test the fix (for an example where expm() was wrong).

	* DESCRIPTION (Date,Version): ready to release 0.999375-5

	* tests/simple.R: testing diagN2U

2008-03-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (diagN2U): interface to

	* src/Csparse.c (Csparse_diagN2U): .Call()able SEXP version of chm_diagN2U()

	* tests/matprod.R: test for triangularity preserving <dtC> %*% <dtC>

2008-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/chm_common.c (chm_diagN2U): new utility.

	* src/Csparse.c (Csparse_Csparse_crossprod, Csparse_Csparse_prod):
	make use of chm_diagN2U() and hence now preserve triangularity and
	unit-triangularity.

	* DESCRIPTION (LicenseDetails): new; such that 'License:' becomes "canonical"

2008-03-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (subDiag): fix when x[..] became a vector

	* src/Tsparse.c (Tsparse_diagU2N): new utility, necessary for e.g.
	* src/Csparse.c (Csparse_crossprod): use [CT]sparse_diagU2N() !!

	* R/Auxiliaries.R (.diagU2N): make use of new Tsparse_diagU2N

	* R/Ops.R ("-" (<sparseMatrix>)): use diagU2N()

	* src/chm_common.c (AS_CHM_FINISH): add note about problem
	for triangular (diag = "U").

2008-02-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (as_Csparse2): drop this, replacing by
	* R/bind.R:  .Call(dense_to_Csparse, *)
